--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 <h1 class="header--main">Discover hidden places in the world around you</h1>
 <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-
+<video autoplay loop>
+    <source src="C:\Users\Michael\Desktop\excursion\resource\videos\excursion.mp4" type="video/mp4">
+</video>
 </body>
 </html>
