--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" type="text/css" href="resource/css/style.css">
     </head>
 <body>
-<h1 class="header--main">Discover hidden places in the world around you</h1>
-<p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-<video autoplay loop>
-    <source src="C:\Users\Michael\Desktop\excursion\resource\videos\excursion.mp4" type="video/mp4">
-</video>
+    <h1 class="header--main">Discover hidden places in the world around you</h1>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <video autoplay loop>
+    <source src="resource/videos/excursion.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
