--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <h1 class="header--main">Discover hidden places in the world around you</h1>
     <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
-    <video autoplay loop>
+    <video playsinline autoplay muted loop>
     <source src="resource/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header--secondary">Your personal travel guide</h2>
     <h4 class="header--sub-header">Excursion remembers places you like, and reccomends new points of interest around you.</h4>
+    <p><img src="resource/images/camp.jpg"></p>
+    <p><img src="resource/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
 </body>
 </html>
