--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <h4 class="header--sub-header">Excursion remembers places you like, and reccomends new points of interest around you.</h4>
     <p><img src="resource/images/camp.jpg"></p>
     <p><img src="resource/images/phone.png"></p>
-    <h2>Coming Soon for iPhone and Android</h2>
+    <h2 class="header--secondary">Coming Soon for iPhone and Android</h2>
     <p><a class="link--cta" href="#">Download Excursion (Coming Soon!)</a></p>
+    <p class="footer--copyright">© Excursion</p>
 </body>
 </html>
